Working on document style

--- a/article/article.tex
+++ b/article/article.tex
@@ -47,16 +47,47 @@
 		\paragraph{}
 		[TODO ]
 
+		\begin{table}[h]
+			\centering
+			\small
+			\begin{tabu}{ | c | c | c | c | c | c | c | }
+				\hline
+					& \multicolumn{6}{ c | }{Computer Hardware Dataset} \\ \hline
+					&\emph{R. Lineal} & \emph{ADALINE} & \emph{MLP 10} & \emph{MLP 15} & \emph{MLP 20}  & \emph{MLP 30}\\ \cline{2-7}
+				Tasa Error HoldOut	& $0\%$	 & $0\%$ & $0\%$ & $0\%$	& $0\%$ & $0\%$ \\
+				\hline
+			\end{tabu}
+			\caption{[TODO ]}
+			\label{table:e1}
+		\end{table}
+
 	\section{Experimentos sobre Wine Dataset}
 	\label{sec:e2}
 
 		\paragraph{}
 		[TODO ]
+
+		\begin{table}[h]
+			\centering
+			\small
+			\begin{tabu}{ | c | c | c | c | c | c | }
+				\hline
+					& \multicolumn{5}{ c | }{Wine Dataset} \\ \hline
+					&\emph{R. Logística} & \emph{MLP 10} & \emph{MLP 15} & \emph{MLP 20}  & \emph{MLP 30}\\ \cline{2-6}
+				Tasa Error HoldOut	& $0\%$	 & $0\%$ & $0\%$ & $0\%$	& $0\%$ \\
+				\hline
+			\end{tabu}
+			\caption{[TODO ]}
+			\label{table:e2}
+		\end{table}
+
 %-----------------------------
 %	Bibliographic references
 %-----------------------------
 	\nocite{subject:taa}
 	\nocite{garciparedes:machine-learning-multilayer-perceptron}
+	\nocite{garciparedes:machine-learning-regression}
+	\nocite{garciparedes:machine-learning-single-layer-neural-networks}
 	\nocite{dataset:computer-hardware}
 	\nocite{dataset:wine}
   \bibliographystyle{alpha}
