--- a/article/bib/bib.bib
+++ b/article/bib/bib.bib
@@ -13,9 +13,16 @@
 }
 
 @misc{garciparedes:machine-learning-regression,
-  author        = {García Prado, Sergio},
-  title         = {Regresión Lineal, Múltiple y Logística},
+  author        = {García Prado, Sergio and Fernández Angulo, Óscar},
+  title         = {Regresión Lineal Múltiple y Logística},
   howpublished  = {\url{https://github.com/garciparedes/machine-learning-regression}},
+  year          = 2017
+}
+
+@misc{garciparedes:machine-learning-single-layer-neural-networks,
+  author        = {García Prado, Sergio and Fernández Angulo, Óscar},
+  title         = {Redes Neuronales Monocapa},
+  howpublished  = {\url{https://github.com/garciparedes/machine-learning-single-layer-neural-networks}},
   year          = 2017
 }
 
