Working on wine experiments

--- a/article/article.tex
+++ b/article/article.tex
@@ -66,6 +66,8 @@
 
 		\paragraph{}
 		[TODO ]
+		[2 muestras mal clasificadas en logistic]
+		[3 muestras mal clasificadas en mlp]
 
 		\begin{table}[h]
 			\centering
@@ -74,7 +76,7 @@
 				\hline
 					& \multicolumn{5}{ c | }{Wine Dataset} \\ \hline
 					&\emph{R. Logística} & \emph{MLP 10} & \emph{MLP 15} & \emph{MLP 20}  & \emph{MLP 30}\\ \cline{2-6}
-				Tasa Error HoldOut	& $0\%$	 & $0\%$ & $0\%$ & $0\%$	& $0\%$ \\
+				Tasa Error HoldOut	& $3.389\%$	 & $5.084\%$ & $5.084\%$ & $5.084\%$	& $5.084\%$ \\
 				\hline
 			\end{tabu}
 			\caption{[TODO ]}
