--- a/article/bib/bib.bib
+++ b/article/bib/bib.bib
@@ -12,6 +12,14 @@
   year          = 2016
 }
 
+@misc{wiki:Multilayer_perceptron,
+   author = "Wikipedia",
+   title = "{Multilayer perceptron} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2017",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Multilayer\%20perceptron&oldid=776866963}},
+   note = "[Online; accessed 15-May-2017]"
+ }
+
 @misc{garciparedes:machine-learning-regression,
   author        = {García Prado, Sergio and Fernández Angulo, Óscar},
   title         = {Regresión Lineal Múltiple y Logística},
